--- a/vignettes/S03-analyze_sims.Rmd
+++ b/vignettes/S03-analyze_sims.Rmd
@@ -17,17 +17,329 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(lextremagam)
 library(arrow)
+library(dplyr)
 ```
 
 ```{r}
 setwd("~/Documents/Pedersen2023/Peaks/lextremagam")
 e1_gam_params <- read_parquet("data-raw/sim/results/gam_params_e1.parquet")
-e1_lextrema_results <- read_parquet("data-raw/sim/results/lextrema_results_e1.parquet")
+
+e1_lextrema_results_me <- read_parquet("data-raw/sim/results/lextrema_results_e1.parquet")
+e1_lextrema_results_gratia <- read_parquet("data-raw/sim/results/lextrema_gratia_results_e1.parquet")
+
 e1_peaktest_results <- read_parquet("data-raw/sim/results/peaktest_results_e1.parquet")
 
+hist(e1_lextrema_results_me$seg_id)
+hist(e1_lextrema_results_gratia$seg_id)
 
-hist(e1_lextrema_results$seg_id)
-#assess proportion of peaks detected via the methods. 
+#adding reference data
+ref_metadata_e1 <- sim_dat_e1%>%
+  group_by(func, param, rep, error, dup, scenario_id)%>%
+  summarize(sample_id=first(sample_id))%>%
+  ungroup()
+
+e1_gam_params <- full_join(ref_metadata_e1, e1_gam_params, by="sample_id")
+e1_lextrema_results_me <- full_join(ref_metadata_e1, e1_lextrema_results_me, by="sample_id")
+e1_lextrema_results_gratia <- full_join(ref_metadata_e1, e1_lextrema_results_gratia, by="sample_id")
+
+#peaktest results analysis ####
+  ##false-positive####
+  e1_peaktest_results <- e1_peaktest_results%>%mutate(peaked = case_when(func=="linear" ~ 0,
+                                                                         func=="norm" ~ 1))
+  #TP, TN, FP, FN
+  e1_peaktest_det <- e1_peaktest_results%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(quad = sum(quad_u==peaked)/n(),
+              rmax = sum(rmax_u==peaked)/n(),
+              rmed = sum(rmed_u==peaked)/n(),
+              rprop = sum(rprop_u==peaked)/n(),
+              lines3 = sum(lines3_u==peaked)/n())%>%
+    ungroup()
+  
+  #False-positive error rate
+  e1_peaktest_fpr <- e1_peaktest_det%>%
+    filter(func=="linear")%>%
+    mutate(quad = 1-quad,
+           rmax = 1-rmax,
+           rmed = 1-rmed,
+           rprop = 1-rprop,
+           lines3 = 1-lines3)
+  
+  #Power rate
+  e1_peaktest_pr <- e1_peaktest_det%>%
+    filter(func=="norm")
+
+#assess proportion of peaks detected via the methods. ####
+  #marginaleffect
+  lextrema_me_det <-  e1_lextrema_results_me%>%
+    group_by(scenario_id, func, param, rep, error, dup, sample_id)%>%
+    summarize(peak_det_l = any(feature == "local_max"),
+              peak_det_g = any(feature %in% c("local_max", "boundary_max")))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, param, error, dup, )%>%
+    summarize(peak_det_l = sum(peak_det_l)/n(),
+              peak_det_g = sum(peak_det_g)/n(),
+              n=n())%>%
+    ungroup()
+  
+  lextrema_me_fpr <- lextrema_me_det%>%
+    filter(func=="linear")
+  
+  lextrema_me_pr <- lextrema_me_det%>%
+    filter(func=="norm")
+  
+  samples_global_det <- unique(e1_lextrema_results_me$sample_id[which(e1_lextrema_results_me$feature %in% c("local_max", "boundary_max"))])
+  samples_local_det <- unique(e1_lextrema_results_me$sample_id[which(e1_lextrema_results_me$feature == "local_max")])
+  
+  lextrema_me_peak_capture_global <- e1_lextrema_results_me%>%
+    filter(func=="norm"  & 
+             sample_id %in% samples_global_det & 
+             feature %in% c("local_max", "boundary_max"))%>%
+    rowwise()%>%
+    mutate(g_capture = (param>=x_start & param<=x_end),
+           dist_x_start = abs(param-x_start),
+           dist_x_end = abs(param-x_end),
+           dist_ci = min(dist_x_start,dist_x_end))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, rep, param, error, dup, sample_id)%>%
+    summarize(g_peak_captured = sum(g_capture),
+              dist_ci = min(dist_ci))%>%
+    ungroup()
+  
+  lextrema_me_peak_coverage_global <-lextrema_me_peak_capture_global%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(coverage= sum(g_peak_captured)/n())%>%
+    ungroup()
+
+  lextrema_me_peak_capture_local <- e1_lextrema_results_me%>%
+    filter(func=="norm"  & 
+             sample_id %in% samples_local_det & 
+             feature %in% c("local_max"))%>%
+    rowwise()%>%
+    mutate(g_capture = (param>=x_start & param<=x_end),
+           dist_x_start = (param-x_start),
+           dist_x_end = (param-x_end),
+           dist_ci = ifelse(abs(dist_x_start)<=abs(dist_x_end),
+                            dist_x_start, dist_x_end))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, rep, param, error, dup, sample_id)%>%
+    summarize(l_peak_captured = sum(g_capture),
+              dist_ci = min(dist_ci))%>%
+    ungroup()
+  
+  lextrema_me_peak_coverage_local <-lextrema_me_peak_capture_local%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(coverage= sum(l_peak_captured)/n())%>%
+    ungroup()
+
+  lextrema_me_bias_global <- lextrema_me_peak_capture_global %>%
+    mutate(dist_ci = case_when(g_peak_captured ==1 ~ 0, 
+                               g_peak_captured == 0 ~ dist_ci))%>%
+    group_by(scenario_id, func, error, dup)%>%
+    summarize(mean_dist_ci = mean(dist_ci),
+              sd_dist_ci = sd(dist_ci), 
+              n=n())%>%
+    ungroup()
+  
+  #weird bias artefact cause: boundary max at the start edge
+  View(filter(e1_lextrema_results_me, sample_id %in% weird_dist_ci, feature %in% c("local_max", "boundary_max")))
+  
+  lextrema_me_bias_local <- lextrema_me_peak_capture_local %>%
+    mutate(dist_ci = case_when(l_peak_captured ==1 ~ 0, 
+                               l_peak_captured == 0 ~ dist_ci))%>%
+    group_by(scenario_id, func, error, dup)%>%
+    summarize(mean_dist_ci = mean(dist_ci),
+              sd_dist_ci = sd(dist_ci), 
+              n=n())%>%
+    ungroup()
+  
+  lextrema_me_precision_global <- e1_lextrema_results_me%>%
+    filter(func=="norm", feature %in% c("local_max", "boundary_max"))%>%
+    mutate(width= x_end-x_start)%>%
+    group_by(func, param, rep, error, dup, scenario_id, sample_id)%>%
+    summarize(sum_width= sum(width),
+              n_seg = n())%>%
+    ungroup()%>%
+    group_by(func, param, error, dup, scenario_id)%>%
+    summarize(width_avg = mean(sum_width),
+              width_sd = sd(sum_width),
+              n_2plseg = sum(n_seg>=2),
+              n=n())%>%
+    ungroup()
+    
+  
+  ##Gratia ####
+   lextrema_gr_det <-  e1_lextrema_results_gratia%>%
+    group_by(scenario_id, func, param, rep, error, dup, sample_id)%>%
+    summarize(peak_det_l = any(feature %in% c("local_max")),
+              peak_det_g = any(feature %in% c("local_max", "boundary_max")))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, param, error, dup, )%>%
+    summarize(peak_det_l = sum(peak_det_l)/n(),
+              peak_det_g = sum(peak_det_g)/n(),
+              n=n())%>%
+    ungroup()
+  
+  lextrema_gr_fpr <- lextrema_gr_det%>%
+    filter(func=="linear")
+  
+  lextrema_gr_pr <- lextrema_gr_det%>%
+    filter(func=="norm")
+  
+  samples_global_det <- unique(e1_lextrema_results_gratia$sample_id[which(e1_lextrema_results_gratia$feature %in% c("local_max", "boundary_max"))])
+  samples_local_det <- unique(e1_lextrema_results_gratia$sample_id[which(e1_lextrema_results_gratia$feature == "local_max")])
+  
+  lextrema_gr_peak_capture_global <- e1_lextrema_results_gratia%>%
+    filter(func=="norm"  & 
+             sample_id %in% samples_global_det & 
+             feature %in% c("local_max", "boundary_max"))%>%
+    rowwise()%>%
+    mutate(g_capture = (param>=x_start & param<=x_end),
+           dist_x_start = abs(param-x_start),
+           dist_x_end = abs(param-x_end),
+           dist_ci = min(dist_x_start,dist_x_end))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, rep, param, error, dup, sample_id)%>%
+    summarize(g_peak_captured = sum(g_capture),
+              dist_ci = min(dist_ci))%>%
+    ungroup()
+  
+  lextrema_gr_peak_coverage_global <-lextrema_gr_peak_capture_global%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(coverage= sum(g_peak_captured)/n())%>%
+    ungroup()
+
+  lextrema_gr_peak_capture_local <- e1_lextrema_results_gratia%>%
+    filter(func=="norm"  & 
+             sample_id %in% samples_local_det & 
+             feature %in% c("local_max"))%>%
+    rowwise()%>%
+    mutate(g_capture = (param>=x_start & param<=x_end),
+           dist_x_start = (param-x_start),
+           dist_x_end = (param-x_end),
+           dist_ci = ifelse(abs(dist_x_start)<=abs(dist_x_end),
+                            dist_x_start, dist_x_end))%>%
+    ungroup()%>%
+    group_by(scenario_id, func, rep, param, error, dup, sample_id)%>%
+    summarize(l_peak_captured = sum(g_capture),
+              dist_ci = min(dist_ci))%>%
+    ungroup()
+  
+  lextrema_gr_peak_coverage_local <-lextrema_gr_peak_capture_local%>%
+    group_by(scenario_id, func, param, error, dup)%>%
+    summarize(coverage= sum(l_peak_captured)/n())%>%
+    ungroup()
+
+  lextrema_gr_bias_global <- lextrema_gr_peak_capture_global %>%
+    mutate(dist_ci = case_when(g_peak_captured ==1 ~ 0, 
+                               g_peak_captured == 0 ~ dist_ci))%>%
+    group_by(scenario_id, func, error, dup)%>%
+    summarize(mean_dist_ci = mean(dist_ci),
+              sd_dist_ci = sd(dist_ci), 
+              n=n())%>%
+    ungroup()
+  
+  lextrema_gr_bias_local <- lextrema_gr_peak_capture_local %>%
+    mutate(dist_ci = case_when(l_peak_captured ==1 ~ 0, 
+                               l_peak_captured == 0 ~ dist_ci))%>%
+    group_by(scenario_id, func, error, dup)%>%
+    summarize(mean_dist_ci = mean(dist_ci),
+              sd_dist_ci = sd(dist_ci), 
+              n=n())%>%
+    ungroup()
+    
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+    
+    n_lextrema_me <- e1_lextrema_results%>%
+      group_by(func, param, rep, error, dup, scenario_id, sample_id)%>%
+      summarize(n_local_max = sum(feature=="local_max"),
+               n_local_min = sum(feature=="local_min"),
+               n_boundary_max = sum(feature=="boundary_max"),
+               n_boundary_min = sum(feature=="boundary_max"),
+               n_extrema = sum(feature %in% c("local_max", "local_min", "boundary_max", "boundary_min")),
+               extrema_detected = n_extrema!=0,
+               local_max_detected = n_local_max !=0)%>%
+      ungroup()
+    
+    lextrema_me_power <- n_lextrema_me%>%
+      filter(func == "norm")%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(n_extrema_detected = sum(extrema_detected),
+                prop_extrema_detected = sum(extrema_detected)/n(),
+                n_local_max_detected = sum(local_max_detected),
+                prop_local_max_detected = sum(local_max_detected)/n())%>%
+      ungroup()
+    
+    coverage_me <- e1_lextrema_results%>%
+      filter(func=="norm", feature %in% c("boundary_max", "local_max"))%>%
+      
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(n_samples = n_distinct(sample_id),
+                capture_local = sum(param>x_start & param<x_end &feature %in% "local_max"),
+                rate_local = capture_local/n_samples,
+                capture = sum(param>x_start & param<x_end &feature %in% c("local_max", "boundary_max")),
+                rate = capture/n_samples)%>%
+      ungroup
+    
+    lextrema_me_false_pos <- n_lextrema_me%>%
+      filter(func == "linear")%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(n_extrema_detected = sum(extrema_detected),
+                prop_extrema_detected = sum(extrema_detected)/n(),
+                n_local_max_detected = sum(local_max_detected),
+                prop_local_max_detected = sum(local_max_detected)/n())%>%
+      ungroup()
+    
+  #gratia
+    n_lextrema_gratia <- e1_lextrema_results_gratia%>%
+       group_by(func, param, rep, error, dup, scenario_id, sample_id)%>%
+      summarize(n_local_max = sum(feature=="local_max"),
+               n_local_min = sum(feature=="local_min"),
+               n_boundary_max = sum(feature=="boundary_max"),
+               n_boundary_min = sum(feature=="boundary_max"),
+               n_extrema = sum(feature %in% c("local_max", "local_min", "boundary_max", "boundary_min")),
+               extrema_detected = n_extrema!=0,
+               local_max_detected = n_local_max !=0)%>%
+      ungroup()
+    
+    lextrema_gratia_power <- n_lextrema_gratia%>%
+      filter(func == "norm")%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(n_extrema_detected = sum(extrema_detected),
+                prop_extrema_detected = sum(extrema_detected)/n(),
+                n_local_max_detected = sum(local_max_detected),
+                prop_local_max_detected = sum(local_max_detected)/n())%>%
+      ungroup()
+    
+    coverage_gratia <- e1_lextrema_results_gratia%>%
+      filter(func=="norm", feature %in% c("boundary_max", "local_max"))%>%
+      
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(n_samples = n_distinct(sample_id),
+                capture_local = sum(param>x_start & param<x_end &feature %in% "local_max"),
+                rate_local = capture_local/n_samples,
+                capture = sum(param>x_start & param<x_end &feature %in% c("local_max", "boundary_max")),
+                rate = capture/n_samples)%>%
+      ungroup
+    
+    lextrema_gratia_false_pos <- n_lextrema_gratia%>%
+      filter(func == "linear")%>%
+      group_by(func, param, error, dup, scenario_id)%>%
+      summarize(n_extrema_detected = sum(extrema_detected),
+                prop_extrema_detected = sum(extrema_detected)/n(),
+                n_local_max_detected = sum(local_max_detected),
+                prop_local_max_detected = sum(local_max_detected)/n())%>%
+      ungroup()
+  #simonoshn
 #assess if lextremagam found a peak
 #assess if lextremagam peak includes true value
 
